config/oauth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: controller-manager
  namespace: system
  labels:
    control-plane: controller-manager
    app.kubernetes.io/name: service-provider-integration-oauth
spec:
  selector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: service-provider-integration-oauth
  replicas: 1
  template:
    metadata:
      labels:
        control-plane: controller-manager
        app.kubernetes.io/name: service-provider-integration-oauth
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - command:
          - /spi-oauth
          image: controller:latest
          name: manager
          securityContext:
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 200m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 20Mi
      serviceAccountName: sa
      terminationGracePeriodSeconds: 10
