config/oauth/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: controller-manager
    app.kubernetes.io/name: service-provider-integration-oauth
